refactor: update ms-core openapi and remove unused related methods